[BACKEND] Add auth cookie-headers to backend
